Receipts/kubernetes/helm/receipts-chart/receipts-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receipts
  namespace: cookingapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: receipts
    spec:
      containers:
      - name: receipts
        image: adrianstanete/receipts-image:latest
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: receipts
---
apiVersion: v1
kind: Service
metadata:
  name: receipts
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: receipts
