Receipts/kubernetes/helm/receipts-chart/receipts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cookingapp-ingress
  namespace: cookingapp
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: cookingapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: receipts
            port:
              number: 80
